Fix code width in articles on mobile devices

--- a/public/styles/post.css
+++ b/public/styles/post.css
@@ -7,6 +7,7 @@ main {
   align-items: center;
   padding: 2rem 0;
   width: 100%;
+  max-width: 100vw;
 }
 
 main > h1 {
@@ -42,6 +43,7 @@ main > hr {
 }
 
 article {
+  width: 100%;
   max-width: 35rem;
 }
 
